# pocket-rdf

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/advanced/: README.md
examples/advanced/data/: catalog_a.ttl  catalog_b.ttl  catalog_c_invalid.ttl  catalog_d_sparql_invalid.ttl  catalog_e_cross_ref.ttl  catalog_f_missing_recommended.ttl
examples/advanced/output/: .gitkeep
examples/advanced/queries/: count_triples_per_graph.sparql  cross_graph_authors.sparql  list_books_by_graph.sparql
examples/advanced/shapes/: library_shapes_info.ttl  library_shapes_sparql.ttl  library_shapes_warning.ttl
examples/cgmes/: NOTICE.txt  README.md
examples/cgmes/adapted_cgmes_2_4_15_shacl/: DiagramLayoutProfile.ttl  EquipmentBoundaryProfile.ttl  EquipmentProfile.ttl  FileHeaderProfile.ttl  GeographicalLocationProfile.ttl  StateVariablesProfile.ttl  SteadyStateHypothesisProfile.ttl  TopologyBoundaryProfile.ttl  TopologyProfile.ttl
examples/cgmes/models/: .gitkeep
examples/cgmes/queries/: count_triples_per_graph.sparql  list_acline_segments.sparql  list_model_headers.sparql  list_substations.sparql  list_types_per_graph.sparql  rdfs_discover_properties.sparql  (+1 more)
examples/simple/: README.md
scripts/: setup.ps1  setup.sh
src/pocket_rdf/: __init__.py  cli.py  cli_query.py  cli_serialize.py  cli_validate.py  loader.py  query.py  serializer.py  validator.py
tests/: test_cli.py  test_cli_query.py  test_cli_serialize.py  test_cli_validate.py  test_examples_advanced.py  test_examples_simple.py  test_loader.py  test_query.py  test_serialize.py  test_validator.py
tests/data/: data.ttl  info_shapes.ttl  non_conform_data.ttl  query.sparql  shapes.ttl  warning_shapes.ttl
(+9 files in other folders)
